Updated swagger api documentation
