# handlers/post.go
@@ -6,6 +6,15 @@ import (
 	"github.com/AdiAkhileshSingh15/microservices-productapi/data"
 )
 
+// swagger:route POST /products products createProduct
+// Create a new product
+//
+// responses:
+//
+//		200: productResponse
+//	 422: errorValidation
+//	 501: errorResponse
+
 func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle POST Product")
 
